[tool.poetry]
name = "tasksys"
version = "0.1.0"
description = "A simple task system"
authors = ["Chris <chrishou@deegualien.com.tw>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pydantic = "^1.10.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
ipython = "^8.8.0"
flake8 = "^6.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
